--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -27,6 +27,10 @@ body {
     grid-template-columns: minmax(300px, 25%) 1fr;
     padding: 0;
     margin: 0;
+
+    @media only screen and (max-width: 900px) {
+        grid-template-columns: 1fr;
+    }
 }
 
 .sidebar {
@@ -62,7 +66,8 @@ body {
     background: $COLOR-MAIN-BACKGROUND;
 
     > #stepper {
-        height: 5rem;
+        min-height: 5em;
+        height: auto;
         background: $COLOR-STEPPER-BACKGROUND;
         color: $COLOR-STEPPER-TEXT;
         text-align: center;
@@ -76,7 +81,7 @@ body {
                 line-height: 2.5em;
                 list-style-type: none;
                 display: inline;
-                margin-right: 15rem;
+                margin-right: 3rem;
                 padding-top: 8px;
 
                 a {
